--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --configuration development",
+    "start": "ng serve --host 0.0.0.0 --disable-host-check --configuration development",
     "start:prod": "ng serve --configuration production",
     "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
