--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --disable-host-check --configuration development",
-    "start:prod": "ng serve --configuration production",
+    "start:prod": "cross-env NODE_ENV=production ng serve --configuration production",
     "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -22,6 +22,9 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.9",
     "@tailwindcss/postcss": "^4.1.6",
+    "@types/dotenv": "^6.1.1",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
@@ -33,6 +36,7 @@
     "@angular-devkit/build-angular": "^19.2.9",
     "@angular/cli": "^19.2.9",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
